<resources>
    <string name="app_name">My Twitter</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="compose_hint">What\'s happening ?</string>
    <string name="tweet_button_text">Tweet</string>
    <string name="character_count">140</string>
    <string name="log_in_button_text">Log in</string>
    <string name="login_twitter_headline">Welcome to\nTwitter.</string>
    <string name="login_twitter_body">See what\'s happening in the\nworld right now.</string>
    <string name="network_unavailable">Network Unavailable</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="lists">Lists</string>
    <string name="profile">Profile</string>
    <string name="network_not_available">No connection</string>
    <string name="retry">RETRY</string>
    <string name="tweet">Tweet</string>
    <string name="retweets">RETWEETS</string>
    <string name="likes">LIKES</string>
    <string name="log_out_title">Log out</string>
    <string name="log_out_message">Are you sure ? Logging out will remove all Twitter data from this device.</string>
    <string name="compose">Compose</string>
    <string name="reply">Reply</string>
    <string name="sign_out">Sign out</string>
    <string name="replying_to">Replying to %s</string>
</resources>
