<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/ToolbarTheme"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <EditText
            android:id="@+id/tvCompose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/compose_hint"
            android:padding="@dimen/padding_general"
            android:textColorHint="@color/colorPrimaryDark"
            android:layout_below="@+id/tvReplyingTo"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="16dp"
            android:layout_alignParentStart="true" />

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <Button
                    android:id="@+id/btnTweet"
                    style="@style/TweetButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/padding_general"
                    android:enabled="false"
                    android:text="@string/tweet_button_text" />

                <TextView
                    android:id="@+id/tvCharCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_toLeftOf="@+id/btnTweet"
                    android:layout_toStartOf="@+id/btnTweet"
                    android:text="@string/character_count" />
            </RelativeLayout>

        </FrameLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="@dimen/view_height"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/frameLayout"
            android:background="@color/grey_200" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Replying to"
            android:textColor="@color/grey_400"
            android:id="@+id/tvReplyingTo"
            android:layout_alignBottom="@+id/ivReplyingTo"
            android:layout_toRightOf="@+id/ivReplyingTo"
            android:layout_toEndOf="@+id/ivReplyingTo" />

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:id="@+id/ivReplyingTo"
            android:layout_margin="@dimen/padding_general"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            app:srcCompat="@drawable/ic_arrow_downward"
            android:layout_alignParentStart="true" />

    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>
